# RPC-DeepDives

./: .gitignore  README.md
node/: Cargo.toml
node/src/: rpc.rs
pallets/template/: Cargo.toml
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
